--- a/Practice Project/Community.html
+++ b/Practice Project/Community.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DSA Revision Community</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .group:hover .hover-image {
@@ -23,7 +23,7 @@
         <nav class="sticky top-0 grid grid-cols-2  xl:grid-cols-3  items-center gap-2 bg-gray-100 p-4">
             <!-- opening nav -->
             <a href="#" class="flex gap-4 items-center">
-                <img src="../icons/icon.png" alt="icon..." class="w-10 h-10 rounded-full">
+                <img src="./icons/icon.png" alt="icon..." class="w-10 h-10 rounded-full">
                 <h1 class=" font-bold">30 Day<br> Coding</h1>
             </a>
             <ul
@@ -59,7 +59,7 @@
                         $5/month</a>
                 </div>
                 <div class="flex justify-center items-center mt-4 ">
-                    <img src="../icons/certificate.png" alt="" class=" w-3/4 object-cover ">
+                    <img src="./icons/certificate.png" alt="" class=" w-3/4 object-cover ">
                 </div>
             </div>
             <!-- close first block -->
@@ -69,19 +69,19 @@
             <div
                 class="container mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4  mt-8 gap-6  mb-8 p-8">
                 <div class="flex gap-2 justify-center items-center ">
-                    <img src="../icons/book-guides.svg" alt="" class="w-12 h-12">
+                    <img src="./icons/book-guides.svg" alt="" class="w-12 h-12">
                     <p>5+ Guides for Free</p>
                 </div>
                 <div class="flex gap-2 justify-center items-center">
-                    <img src="../icons/courses.svg" alt="" class="w-12 h-12">
+                    <img src="./icons/courses.svg" alt="" class="w-12 h-12">
                     <p>Exclusive Courses & Projects</p>
                 </div>
                 <div class="flex gap-2 justify-center items-center">
-                    <img src="../icons/whatsapp.svg" alt="" class="w-12 h-12">
+                    <img src="./icons/whatsapp.svg" alt="" class="w-12 h-12">
                     <p>24/7 WhatsApp Support Group</p>
                 </div>
                 <div class="flex gap-2 justify-center items-center">
-                    <img src="../icons/sessions.svg" alt="" class="w-12 h-12">
+                    <img src="./icons/sessions.svg" alt="" class="w-12 h-12">
                     <p>1:1 Free Session</p>
                 </div>
 
@@ -92,22 +92,22 @@
             <!-- job profile part  -->
             <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-3 p-10">
                 <div class="flex flex-col items-center p-5">
-                    <img src="../icons/my_img.jpg" alt="" class="w-20 h-20 rounded-full mb-5">
+                    <img src="./icons/my_img.jpg" alt="" class="w-20 h-20 rounded-full mb-5">
                     <p class="text-center font-medium text-gray-500">"This community has been a game-changer for my
                         career. The exclusive courses and personalized
                         guidance from expert mentors have helped me take my coding skills to the next level."</p>
                     <h1 class="mt-5 font-bold text-xl">Rahul Singh Dani</h1>
                     <p>SWE at Google</p>
                     <div class="flex mt-5">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
                     </div>
                 </div>
                 <div class="flex flex-col items-center p-5">
-                    <img src="../icons/my_img.jpg" alt="" class="w-20 h-20 rounded-full mb-5">
+                    <img src="./icons/my_img.jpg" alt="" class="w-20 h-20 rounded-full mb-5">
                     <p class="text-center font-medium text-gray-500">"The exclusive courses and bi-weekly live sessions
                         have been incredibly insightful, and
                         collaborating on open-source projects has been a great way to build my portfolio. I highly
@@ -115,15 +115,15 @@
                     <h1 class="mt-5 font-bold text-xl">Rahul Singh Dani</h1>
                     <p>SWE at Google</p>
                     <div class="flex mt-5">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
                     </div>
                 </div>
                 <div class="flex flex-col items-center p-5">
-                    <img src="../icons/my_img.jpg" alt="" class="w-20 h-20 rounded-full mb-5">
+                    <img src="./icons/my_img.jpg" alt="" class="w-20 h-20 rounded-full mb-5">
                     <p class="text-center font-medium text-gray-500">"Joining this community was one of the best
                         decisions I've made for my career. The 24/7 WhatsApp
                         group has been an incredible resource for networking and collaboration. I highly recommend this
@@ -131,11 +131,11 @@
                     <h1 class="mt-5 font-bold text-xl">Rahul Singh Dani</h1>
                     <p>SWE at Google</p>
                     <div class="flex mt-5">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
-                        <img src="../icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
+                        <img src="./icons/stars.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -161,22 +161,22 @@
                         <h1 class="text-xl font-bold text-green-500 font-sans">What's included</h1>
                         <div class="mt-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 xl:grid-cols-2 ">
                             <div class="flex items-center p-3">
-                                <img src="../icons/icon-check.svg" alt="" class="w-5 h-5">
+                                <img src="./icons/icon-check.svg" alt="" class="w-5 h-5">
                                 <p class="ml-4">Expert Mentors</p>
 
                             </div>
                             <div class="flex items-center p-3">
-                                <img src="../icons/icon-check.svg" alt="" class="w-5 h-5">
+                                <img src="./icons/icon-check.svg" alt="" class="w-5 h-5">
                                 <p class="ml-4">Exclusive Courses</p>
 
                             </div>
                             <div class="flex items-center p-3">
-                                <img src="../icons/icon-check.svg" alt="" class="w-5 h-5">
+                                <img src="./icons/icon-check.svg" alt="" class="w-5 h-5">
                                 <p class="ml-4">Networking & Collaboration</p>
                             </div>
 
                             <div class="flex items-center p-3">
-                                <img src="../icons/icon-check.svg" alt="" class="w-5 h-5">
+                                <img src="./icons/icon-check.svg" alt="" class="w-5 h-5">
                                 <p class="ml-4">Career guidance</p>
                             </div>
                         </div>
@@ -196,18 +196,18 @@
                                 Community</a>
                         </div>
                         <div class="relative mt-6 flex group justify-center items-center">
-                            <img src="../icons/my_img.jpg" alt="First Image"
+                            <img src="./icons/my_img.jpg" alt="First Image"
                                 class="relative z-10 w-10 h-10 rounded-full first-image">
-                            <img src="../icons/my_img.jpg" alt="Second Image"
+                            <img src="./icons/my_img.jpg" alt="Second Image"
                                 class="absolute top-0 left-4 transform -translate-x-4 z-20 w-10 h-10 rounded-full hover-image second-image"
                                 style="--translate-x-hover: 4rem;">
-                            <img src="../icons/my_img.jpg" alt="Third Image"
+                            <img src="./icons/my_img.jpg" alt="Third Image"
                                 class="absolute top-0 left-8 transform -translate-x-8 z-30 w-10 h-10 rounded-full hover-image third-image"
                                 style="--translate-x-hover: 8rem;">
-                            <img src="../icons/my_img.jpg" alt="Fourth Image"
+                            <img src="./icons/my_img.jpg" alt="Fourth Image"
                                 class="absolute top-0 left-12 transform -translate-x-12 z-40 w-10 h-10 rounded-full hover-image fourth-image"
                                 style="--translate-x-hover: 12rem;">
-                            <img src="../icons/my_img.jpg" alt="Fifth Image"
+                            <img src="./icons/my_img.jpg" alt="Fifth Image"
                                 class="absolute top-0 left-16 transform -translate-x-16 z-50 w-10 h-10 rounded-full hover-image fifth-image"
                                 style="--translate-x-hover: 16rem;">
                         </div>
@@ -237,7 +237,7 @@
                         </p>
                     </div>
                     <div class="flex flex-col justify-center items-center text-center leading-loose hover-group">
-                        <img src="../icons/illustration-networking.svg" alt=""
+                        <img src="./icons/illustration-networking.svg" alt=""
                             class="w-60 transition-transform duration-300 hover-move-up">
                         <h1 class="text-2xl font-bold font-sans">NETWORKING</h1>
                         <p class="font-sans text-xl text-gray-500 p-5">Connect with like-minded coders from around the
@@ -245,7 +245,7 @@
                         </p>
                     </div>
                     <div class="flex flex-col justify-center items-center text-center leading-loose hover-group">
-                        <img src="../icons/illustration-courses.svg" alt="Illustration Courses"
+                        <img src="./icons/illustration-courses.svg" alt="Illustration Courses"
                             class="w-60 transition-transform duration-300 hover-move-up">
                         <h1 class="text-2xl font-bold font-sans">COURSES</h1>
                         <p class="font-sans text-xl text-gray-500 p-5">Exclusive courses in Full Stack, AI, Blockchain,
@@ -259,12 +259,12 @@
             <!-- logo  -->
             <div class="mt-10 pt-12 pb-10">
                 <div class="flex flex-wrap justify-center items-center gap-4 md:gap-6 lg:gap-8 p-4">
-                    <img src="../icons/adobe.svg" alt="Icon 1" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
-                    <img src="../icons/airbnb.svg" alt="Icon 2" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
-                    <img src="../icons/figma.svg" alt="Icon 3" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
-                    <img src="../icons/framer.svg" alt="Icon 4" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
-                    <img src="../icons/google.svg" alt="Icon 5" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
-                    <img src="../icons/dropbox.svg" alt="Icon 5" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
+                    <img src="./icons/adobe.svg" alt="Icon 1" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
+                    <img src="./icons/airbnb.svg" alt="Icon 2" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
+                    <img src="./icons/figma.svg" alt="Icon 3" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
+                    <img src="./icons/framer.svg" alt="Icon 4" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
+                    <img src="./icons/google.svg" alt="Icon 5" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
+                    <img src="./icons/dropbox.svg" alt="Icon 5" class="w-auto h-8 md:w-20 md:h-10 lg:w-36 lg:h-12">
                 </div>
             </div>
             <!-- logo's close -->
@@ -283,21 +283,21 @@
                         <h1 class="mt-4 text-green-500 text-2xl font-bold font-sans p-5">WHAT YOU'LL GET</h1>
                         <div>
                             <div class="flex gap-3 p-3">
-                                <img src="../icons/icon-guides-2.svg" alt="">
+                                <img src="./icons/icon-guides-2.svg" alt="">
                                 <p class="text-xl font-sans ">Comprehensive guides, projects, & courses</p>
                             </div>
                             <div class="flex gap-3 p-3">
-                                <img src="../icons/icon-job.svg" alt="">
+                                <img src="./icons/icon-job.svg" alt="">
                                 <p class="text-xl font-sans ">Exclusive job + internship postings</p>
                             </div>
                             <div class="flex gap-3 p-3">
-                                <img src="../icons/icon-tips.svg" alt="">
+                                <img src="./icons/icon-tips.svg" alt="">
                                 <p class="text-xl font-sans ">1:1 Career guidance & mentorship</p>
                             </div>
                         </div>
                     </div>
                     <div class="w-full p-5">
-                        <img src="../icons/icon-like.svg" alt="w-full h-full object-cover" class="w-full h-auto p-5">
+                        <img src="./icons/icon-like.svg" alt="w-full h-full object-cover" class="w-full h-auto p-5">
                     </div>
                 </div>
             </div>
@@ -306,7 +306,7 @@
     </div>
     <footer class="p-6 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-3 xl:grid-cols-3">
         <div>
-            <img src="../icons/icon-guides-2.svg" alt="" class="">
+            <img src="./icons/icon-guides-2.svg" alt="" class="">
         </div>
         <div class="text-center">
             <h1 class="">2024 © DSA revision</h1>
