--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 mx-auto ">
                     <div class="flex flex-col justify-center items-center text-center leading-loose hover-group">
-                        <img src="../icons/illustration-mentors.svg" alt=""
+                        <img src="./icons/illustration-mentors.svg" alt=""
                             class="w-60 transition-transform duration-300 hover-move-up">
                         <h1 class="text-2xl font-bold font-sans">EXPERT MENTORS</h1>
                         <p class="font-sans text-xl text-gray-500 p-5">Get personalized guidance from expert mentors to
