--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class=" ">
     <div class="container min-h-screen px-4">
-        <nav class="sticky top-0 grid grid-cols-2  xl:grid-cols-3  items-center gap-2  p-4">
+        <nav class="sticky top-0 grid grid-cols-2  xl:grid-cols-3  items-center gap-2 bg-gray-50 p-4">
             <!-- opening nav -->
             <a href="#" class="flex gap-4 items-center">
                 <img src="./icons/icon.png" alt="icon..." class="w-10 h-10 rounded-full">
@@ -308,13 +308,10 @@
         <div>
             <img src="./icons/icon-guides-2.svg" alt="" class="">
         </div>
-        <div class="text-center">
+        <div class="text-right">
             <h1 class="">2024 © DSA revision</h1>
         </div>
-        <div class="text-right">
-            
-            <h1 class=" ">Thank You !</h1>
-        </div>
+        
     </footer>
 </body>
 
