--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
                     </div> 
 
                         <ul role="list" class="grid grid-cols-1 gap-4 mt-6 text-sm leading-6 text-gray-600 sm:grid-cols-2 sm:gap-6">
-                            <li class="flex gap-x-3"><img class="flex-none w-5 h-5 shrink-0" src="../icons/icon-check.svg" alt="">Expert Mentors</li>
-                            <li class="flex gap-x-3"><img class="flex-none w-5 h-5 shrink-0" src="../icons/icon-check.svg" alt="">Exclusive Courses</li>
-                            <li class="flex gap-x-3"><img class="flex-none w-5 h-5 shrink-0" src="../icons/icon-check.svg" alt="">Networking & Collaboration</li>
-                            <li class="flex gap-x-3"><img class="flex-none w-5 h-5 shrink-0" src="../icons/icon-check.svg" alt="">Career guidance</li>
+                            <li class="flex gap-x-3"><img class="flex-none w-5 h-5 shrink-0" src="./icons/icon-check.svg" alt="">Expert Mentors</li>
+                            <li class="flex gap-x-3"><img class="flex-none w-5 h-5 shrink-0" src="./icons/icon-check.svg" alt="">Exclusive Courses</li>
+                            <li class="flex gap-x-3"><img class="flex-none w-5 h-5 shrink-0" src="./icons/icon-check.svg" alt="">Networking & Collaboration</li>
+                            <li class="flex gap-x-3"><img class="flex-none w-5 h-5 shrink-0" src="./icons/icon-check.svg" alt="">Career guidance</li>
                             
                         </ul>
 
@@ -193,18 +193,18 @@
                         </div>
                         <div class="flex flex-col items-center mt-10 gap-y-3 gap-x-4">
                             <div class="flex -space-x-2 overflow-hidden transition-all duration-150 isolate hover:-space-x-1">
-                            <img src="../icons/my_img.jpg" alt="First Image"
+                            <img src="./icons/my_img.jpg" alt="First Image"
                                 class="relative z-30 inline-block w-8 h-8 rounded-full ring-2 ring-white">
-                            <img src="../icons/my_img.jpg" alt="Second Image"
+                            <img src="./icons/my_img.jpg" alt="Second Image"
                                 class="relative z-30 inline-block w-8 h-8 rounded-full ring-2 ring-white"
                                 style="--translate-x-hover: 4rem;">
-                            <img src="../icons/my_img.jpg" alt="Third Image"
+                            <img src="./icons/my_img.jpg" alt="Third Image"
                                 class="relative z-30 inline-block w-8 h-8 rounded-full ring-2 ring-white"
                                 style="--translate-x-hover: 8rem;">
                             <img src="../icons/my_img.jpg" alt="Fourth Image"
                                 class="relative z-30 inline-block w-8 h-8 rounded-full ring-2 ring-white"
                                 style="--translate-x-hover: 12rem;">
-                            <img src="../icons/my_img.jpg" alt="Fifth Image"
+                            <img src="./icons/my_img.jpg" alt="Fifth Image"
                                 class="relative z-30 inline-block w-8 h-8 rounded-full ring-2 ring-white"
                                 style="--translate-x-hover: 16rem;">
                                 </div>
@@ -225,9 +225,9 @@
             <div>
                 <div class="flex justify-center items-center mt-8 p-5">
                     <div class="w-[55%] leading-relaxed">
-                        <h1 class="text-5xl text-center font-bold font-sans">EVERYTHING YOU NEED IN ONE COMMUNITY</h1>
-                        <h1 class="text-2xl text-gray-400 font-sans">Unleashing your digital potential for lasting
-                            success</h1>
+                        <p class="text-xl sm:text-2xl md:text-3xl xl:text-5xl text-center font-bold font-sans">EVERYTHING YOU NEED IN ONE COMMUNITY</p>
+                        <p class="text-xl md:text-2xl xl:text-2xl text-gray-400 font-sans">Unleashing your digital potential for lasting
+                            success</p>
                     </div>
 
                 </div>
