--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <div class="text-right">
             <h1 class="">2024 © DSA revision</h1>
         </div>
-        
+        <p class="text-center">Thank you !</p>
     </footer>
 </body>
 
