--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             <img src="./icons/my_img.jpg" alt="Third Image"
                                 class="relative z-30 inline-block w-8 h-8 rounded-full ring-2 ring-white"
                                 style="--translate-x-hover: 8rem;">
-                            <img src="../icons/my_img.jpg" alt="Fourth Image"
+                            <img src="./icons/my_img.jpg" alt="Fourth Image"
                                 class="relative z-30 inline-block w-8 h-8 rounded-full ring-2 ring-white"
                                 style="--translate-x-hover: 12rem;">
                             <img src="./icons/my_img.jpg" alt="Fifth Image"
