--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- opening nav -->
             <a href="#" class="flex gap-4 items-center">
                 <img src="./icons/icon.png" alt="icon..." class="w-10 h-10 rounded-full">
-                <h1 class=" font-bold">30 Day<br> Coding</h1>
+                <h1 class=" font-bold">Coding<br> Community</h1>
             </a>
             <ul
                 class="flex gap-5 bg-gray-200 justify-center items-center rounded-3xl px-3 py-3 text-gray-500 text-sm font-medium hidden  xl:flex">
