--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container min-h-screen px-4">
         <nav id="nav" class="sticky top-0 grid grid-cols-2  xl:grid-cols-3  items-center gap-2 bg-gray-50 p-4">
             <!-- opening nav -->
-            <a href="#nav" class="flex gap-4 items-center">
+            <a href="#intro" class="flex gap-4 items-center">
                 <img src="./icons/icon.png" alt="icon..." class="w-10 h-10 rounded-full">
                 <h1 class=" font-bold">Coding<br> Community</h1>
             </a>
